[package]
name = "lunar_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lunar_rust"
path = "./src/lib/lunar_lib.rs"
crate-type = ["lib"]
doctest = false

[dependencies]
chrono = "0.4.31"
chrono-tz = "0.8.4"
once_cell = "1.18.0"
serde_json = "1.0.108"
